tests/invalids/tripleEquals.gt
proc main ()
    int m;
begin
    if (m = n = o) then
        m := n;
    fi
end
